fixed body overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
   font-size: 13px;
   font-family: "Raleway", sans-serif;
   background-color: white;
+  overflow-x: hidden;
 }
 
 /* nav-bar */
